--- a/views/friends.ejs
+++ b/views/friends.ejs
@@ -30,7 +30,7 @@
         <td><%= data[i].mob_no %></td>
         <td><%= data[i].gender %></td>
         <td class="center">
-        <a href='/home/editfriend/<%= data[i].id %>' class="btn btn-info btn-sm" data-toggle="tooltip" title="Edit"><span class="glyphicon glyphicon-pencil"></span></a>
+        <a href='/home/addfriend/<%= data[i].id %>' class="btn btn-info btn-sm" data-toggle="tooltip" title="Edit"><span class="glyphicon glyphicon-pencil"></span></a>
 
         <a href='/home/removefriend/<%= data[i].id %>' class="btn btn-danger btn-sm" data-toggle="tooltip" title="Delete"><span class="glyphicon glyphicon-remove"></span></a>
         </td>
